--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Honk (in beta)</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <script>
       (() => {
         if (process?.env?.NODE_ENV !== 'development') {
